# LoCo

./: .gitignore  README.md  pyproject.toml  test.py  train.py
config/: main.yaml
config/data/: patchpair_smoothap_data.yaml  segmentation_data.yaml  vpr_data.yaml
config/eval/: mean_ap.yaml  pixel_corrs.yaml  segmentation.yaml  vpr.yaml
config/loss/: vec_smooth_ap.yaml
config/model/: patchpair_smoothap_model.yaml
scripts/data_preparation_scripts/: category_mapping.tsv  matterport3d_calc_3dpatchlocations.py  matterport3d_calc_img_overlap.py  matterport3d_compute_segmentations.py  matterport3d_count_objects.py  matterport3d_precompute.py  matterport_colmap_slurm.sh  run_matterport3d_pipeline.sh  run_scannet_pipeline.sh  scannet_calc_3dpatchlocations.py  scannet_calc_img_overlap.py  scannet_compute_segmentations.py  scannet_count_objects.py  scannet_precompute.py
src/data/: matterport_dataset.py  matterport_imageonly_dataset.py  mean_ap_batchsampler.py  patch_pair_batchsampler.py  patch_pair_dataset.py  scannetpairs_dataset.py  segmentation_dataset.py  single_scene_batchsampler.py  vlad_vocab_dataset.py  vpr_dataset.py
src/lightning/: data.py  linear_probe.py  smoothap_module.py
src/losses/: vec_smooth_ap.py
src/models/: baselines.py  concat_model.py  croco_feature_extractor.py  deltadino_feature_extractor.py  dino_network.py  dino_peft.py  dino_with_head.py  dinov2_network.py  pure_dino_feature_extractor.py  pure_dinov2_feature_extractor.py  resnet50_baseline.py  vlad.py
src/test_scripts/: location_consistency.py  place_recognition.py  segmentation.py
(+30 files in other folders)
