[tool.poetry]
name = "loco"
version = "1.1.0"
description = "LoCo"
authors = ["Dominik Kloepfer"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = {version = "^2.1.0+cu121", source = "pytorch"}
torchvision = {version = "^0.16.0+cu121", source = "pytorch"}
lightning = "^2.1.0"
einops = "^0.7.0"
kornia = "^0.7.0"
timm = "^0.9.7"
albumentations = "^1.3.1"
scikit-learn = "^1.3.1"
yacs = "^0.1.8"
loguru = "^0.7.2"
wandb = "^0.15.12"
faiss-cpu = "^1.7.4"
tqdm = "^4.66.1"
open3d = "^0.17.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
